Add Stripe checkout for booking deposits

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL="file:./dev.db"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+STRIPE_SECRET_KEY="sk_test_your_secret_key"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_your_publishable_key"
+STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
